syntax = "proto3";

package v2ray.core.app.tun;
option csharp_namespace = "V2Ray.Core.App.Tun";
option go_package = "github.com/v2fly/v2ray-core/v4/app/tun";
option java_package = "com.v2ray.core.app.tun";
option java_multiple_files = true;


import "app/router/config.proto";
import "transport/internet/config.proto";

message Config {
    string name = 1;
    uint32 mtu = 2;
    uint32 user_level = 3;
    reserved 4; // Reserved for PacketEncode
    string tag = 5;
    repeated v2ray.core.app.router.CIDR ips = 6;
    repeated v2ray.core.app.router.CIDR routes = 7;
    bool enable_promiscuous_mode = 8;
    bool enable_spoofing = 9;
    v2ray.core.transport.internet.SocketConfig socket_settings = 10;
}