syntax = "proto3";

package v2ray.core.transport.internet.tls.utls;
option csharp_namespace = "V2Ray.Core.Transport.Internet.Tls.UTls";
option go_package = "github.com/v2fly/v2ray-core/v4/transport/internet/tls/utls";
option java_package = "com.v2ray.core.transport.internet.tls.utls";
option java_multiple_files = true;

import "transport/internet/tls/config.proto";

message Config {
  v2ray.core.transport.internet.tls.Config tls_config = 1;
  string imitate = 2;
  bool noSNI = 3;
}